--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
+    "classnames": "^2.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.5.0",
@@ -21,6 +23,8 @@
     "@nx/react": "16.5.0",
     "@nx/vite": "16.5.0",
     "@nx/workspace": "16.5.0",
+    "@svgr/plugin-jsx": "^8.0.1",
+    "@svgr/plugin-svgo": "^8.0.1",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
@@ -45,6 +49,7 @@
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "typescript": "~5.1.3",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0"
