--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@svgr/plugin-svgo": "^8.0.1",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
